create and register user added

--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "spotly",
   "version": "1.0.0",
   "description": "A web application for connecting businesses and potential clients.",
-  "main": "index.js",
+  "main": "app.js",
   "devDependencies": {
+    "@types/express": "^5.0.4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "node-mocks-http": "^1.17.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node build/app.js"
+    "start": "node dist/server.js",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --runInBand --coverage"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Drytec/Spottly-Backend.git"
@@ -21,9 +31,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/Drytec/Spottly-Backend/issues"
   },
-  "homepage": "https://github.com/Drytec/Spottly-Backend#readme"
+  "homepage": "https://github.com/Drytec/Spottly-Backend#readme",
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0"
+  }
 }
