--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A web application for connecting businesses and potential clients.",
   "main": "app.js",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
@@ -36,11 +38,13 @@
   },
   "homepage": "https://github.com/Drytec/Spottly-Backend#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "helmet": "^8.1.0"
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
