--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,16 +2,16 @@ name: Spotly CI/CD Pipeline
 
 on:
   push:
-    branches: [ 'feature/*' ]
+    branches: ["feature/*"]
   pull_request:
-    branches: [ 'testing', 'staging', 'feature/*' ]
+    branches: ["testing", "staging", "feature/*"]
 
 jobs:
   quality-checks:
     name: Code Quality & Tests
     runs-on: ubuntu-latest
     continue-on-error: ${{ github.event_name == 'pull_request' }}
-    
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install Dependencies
         run: npm ci
@@ -40,7 +40,7 @@ jobs:
       - name: Run Build
         run: npm run build
 
-  # CD para Staging 
+  # CD para Staging
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
@@ -49,7 +49,6 @@ jobs:
       github.ref == 'refs/heads/staging' || 
       (github.event_name == 'pull_request' && github.base_ref == 'refs/heads/staging')
     environment: staging
-    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -57,5 +56,5 @@ jobs:
       - name: Deploy to Vercel (Staging)
         uses: amondnet/vercel-action@v20
         with:
-            vercel-token: ${{ secrets.VERCEL_TOKEN }}
-            vercel-args: '--prod --yes --env NEXT_PUBLIC_ENV=staging'
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-args: "--prod --yes --env NEXT_PUBLIC_ENV=staging"
