--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^30.2.0",
     "jiti": "^2.6.1",
     "node-mocks-http": "^1.17.2",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
@@ -24,6 +25,9 @@
     "typescript-eslint": "^8.46.2"
   },
   "scripts": {
+    "format": "prettier . --write",
+    "type-check": "tsc --noEmit",
+    "format:check": "prettier . --check",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
